<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="60dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/superplayer_bv_button1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="@string/superplayer_resolution_normal" />

    <Button
        android:id="@+id/superplayer_bv_button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="@string/superplayer_definition_super" />

    <Button
        android:id="@+id/superplayer_bv_button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="@string/superplayer_definition_high" />

    <Button
        android:id="@+id/superplayer_bv_button4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="@string/superplayer_resolution_low" />
</LinearLayout>
